--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Raleway&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -44,6 +44,7 @@
                 rutrum eget massa a convallis. Nam vitae augue malesuada, accumsan mauris ut, consectetur.
             </p>
             <div class="border-right"></div>
+            <button>VIEW PROFILE</button>
         </div>
     </main>
 
